srcs/tester/base/list/rbegin_rend/log.txt
In file included from ./base/list/rbegin_rend/patched.cpp:3:
In file included from ../list.hpp:3:
In file included from ../sfinae.hpp:4:
../iterator.hpp:58:35: error: called object type 'ft::list_iterator<ft::bidirectional_iterator_tag, int, long, ft::list<int, std::allocator<int> >::Node<int> *, int &>::pointer' (aka 'ft::list<int, std::allocator<int> >::Node<int> *') is not a function or function pointer
  reference operator*() { return *ptr_(); };
                                  ^~~~
../iterator.hpp:97:64: note: in instantiation of member function 'ft::list_iterator<ft::bidirectional_iterator_tag, int, long, ft::list<int, std::allocator<int> >::Node<int> *, int &>::operator*' requested here
  reference operator*() const { Iterator tmp = current; return *(tmp); };
                                                               ^
./base/list/rbegin_rend/patched.cpp:12:22: note: in instantiation of member function 'ft::reverse_iterator<ft::list_iterator<ft::bidirectional_iterator_tag, int, long, ft::list<int, std::allocator<int> >::Node<int> *, int &> >::operator*' requested here
 std::cout << ' ' << *rit;
                     ^
1 error generated.
